Removed call to JDK 1.5 method.
I really need to install a 1.4 JDK on my machines :-(

git-svn-id: svn://localhost/tmp/s2g/colossus.svn/trunk@2906 c5679a2a-0e0e-0410-bba2-8642b794b8c1